--- a/src/robots-hostel/robot-loop/part/eye/index.module.scss
+++ b/src/robots-hostel/robot-loop/part/eye/index.module.scss
@@ -1,26 +1,30 @@
 .eye {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+
+  .eye_left {
+    position: absolute;
+    top: 50%;
+    left: calc(50% - 20vw);
+    transform: translate(-50%, -50%);
+  }
+
+  .eye_right {
+    position: absolute;
+    top: 50%;
+    left: calc(50% + 20vw);
+    transform: translate(-50%, -50%);
+  }
+  .eyeBall {
     position: relative;
-    width: 100vw;
-    height: 100vh;
-
-    .eye_left {
-        position: absolute;
-        top: 50%;
-        left: calc(50% - 20vw);
-        transform: translate(-50%, -50%);
-    }
-
-    .eye_right {
-        position: absolute;
-        top: 50%;
-        left: calc(50% + 20vw);
-        transform: translate(-50%, -50%);
-    }
-    .eyeBall {
-        position: relative;
-        left: 0;
-        top: 0;
-        background: radial-gradient(circle,rgba(101, 191, 160, 1) 0%, rgba(87, 199, 133, 1) 10%, rgba(175, 237, 199, 1) 100%);
-    }
-
+    left: 0;
+    top: 0;
+    background: radial-gradient(
+      circle,
+      rgba(101, 191, 160, 1) 0%,
+      rgba(87, 199, 133, 1) 10%,
+      rgba(175, 237, 199, 1) 100%
+    );
+  }
 }
